--- a/tribute_styles.css
+++ b/tribute_styles.css
@@ -26,8 +26,10 @@ img {
 }
 
 figcaption {
-  margin: 12px;
+  margin: 12px auto;
   padding: 0 12px;
+  max-width: 800px;
+  width: 95%;
 }
 
 #tribute-info {
